--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,23 @@
-<div class="container">
-
-    <div class="col" style="text-align: center; color:darkmagenta;"><h1><u>{{titulo}}</u></h1></div>
-
-    <br><br>
-
-    <form class="form-group row">
-
-      <div class="form-group col-md-3">
-
-        <label for="nombre">Nombre:</label>
-        <input type="text" name="nombre" id="nombre" placeholder="Nombre" class="form-control" [(ngModel)]="cuadroNombre">
-
-      </div>
-
-      <div class="form-group col-md-3">
-
-        <label for="apellido">Apellido:</label>
-        <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control" [(ngModel)]="cuadroApellido">
-
-      </div>
-
-      <div class="form-group col-md-3">
-
-        <label for="cargo">Cargo:</label>
-        <input type="text" name="cargo" id="cargo" placeholder="Cargo" class="form-control" [(ngModel)]="cuadroCargo">
-
-      </div>
-
-      <div class="form-group col-md-3">
-
-        <label for="salario">Salario:</label>
-        <input type="text" name="salario" id="salario" placeholder="Salario" class="form-control" [(ngModel)]="cuadroSalario">
-
-      </div>
-
-      <div class="col">
-
-        <button type="submit" class="btn btn-warning" (click)="agregarAlumno()" style="margin-top: 35px;">Agregar</button>
-
-      </div>
-
-    </form>
+<nav class="navbar navbar-expand-sm bg-info">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="">Inicio</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/proyectos">Proyectos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/quienes">Quienes Somos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/contacto">Contacto</a>
+    </li>
+  </ul>
+</nav>
+<br>
 
 
-</div>
-
-<br><br><br>
-
-<app-alumno-hijo-c  *ngFor="let alumno of alumnos; let i=index" [alumnoDeLista]="alumno" [indice]="i"></app-alumno-hijo-c>
+<router-outlet></router-outlet>
 
 
 
